实现了通用栈
实现了通用栈

--- a/structure/stack/Stack_structure.vcproj
+++ b/structure/stack/Stack_structure.vcproj
@@ -180,6 +180,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\Item.h"
+				>
+			</File>
+			<File
 				RelativePath=".\stack.h"
 				>
 			</File>
